add capabilities on admin pannel
